# raspi-petcam

./: .gitignore  README.md  config.example.yaml  petcam.service  pyproject.toml
src/petcam/: app.py  camera.py  config.py  main.py  motion.py  picam_camera.py  recorder.py  storage.py  streaming.py
tests/: test_api.py  test_camera.py  test_config.py  test_motion.py  test_recorder.py  test_storage.py  test_streaming.py
web/: index.html
