[project]
name = "petcam"
version = "0.1.0"
description = "Raspberry Pi pet camera with live streaming and motion-triggered recording"
readme = "README.md"
authors = [
    { name = "seigow", email = "seigow.fukushima@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.43.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
